@@ -1,6 +1,7 @@
 0.2.4
 -----
 1. Add support for (DSD) WavPack - thanks to Bart Lauret
+2. Update version of bliss library.
 
 0.2.3
 -----
